# svault

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  refactor_task.md  svault.toml
.github/workflows/: ci.yml  release.yml
docs/: E2E_CONFTEST_REFACTOR_PLAN.md  E2E_EXPANSION_PLAN.md  UNIT_TESTS.md  ai-user-testing.md  cli.md  database-schema.md  file-identity.md  import-pipeline.md  logo-prompt.md  refactor_proposal_full.md  testing-plan.md
e2e_tests/: README.md  conftest.py  pyproject.toml  run.ps1  run.sh  setup_ramdisk.sh  test_add.py  test_atomic_verification.py  test_concurrent_modification.py  test_disk_full.py  test_exif_fallback.py  test_history.py  test_import_basic.py  test_import_ignore.py  test_media_formats.py  test_property.py  test_recheck.py  test_reconcile.py  test_verify.py
e2e_tests/fixtures/: test_rules.json
scripts/: build-centos.sh  build-release.sh
src/: cli.rs  config.rs  main.rs
src/db/: schema.rs
src/vfs/: mod.rs  system.rs
svault-cli/: Cargo.toml
svault-cli/src/: cli.rs  context.rs  main.rs  reporting.rs
svault-cli/src/commands/: add.rs  clone.rs  db.rs  debug_reporter.rs  history.rs  import.rs  init.rs  mod.rs  mtp.rs  recheck.rs  reconcile.rs  scan.rs  status.rs  sync.rs  update.rs  verify.rs
svault-cli/src/reporting/: json.rs  mod.rs  path.rs  pipe.rs  terminal.rs
svault-core/: Cargo.toml
svault-core/src/: background_hash.rs  config.rs  context.rs  fs.rs  hardlink_upgrade.rs  lib.rs  lock.rs  status.rs
svault-core/src/db/: dump.rs  files.rs  mod.rs  stats.rs
svault-core/src/hash/: mod.rs
svault-core/src/history/: items.rs  mod.rs  sessions.rs
svault-core/src/import/: add.rs  exif.rs  mod.rs  path.rs  recheck.rs  reconcile.rs  scan.rs  staging.rs  types.rs  update.rs  utils.rs  vfs_import.rs
svault-core/src/media/: binding.rs  crc.rs  formats.rs  mod.rs  raw.rs  raw_id.rs  video.rs
svault-core/src/pipeline/: crc.rs  hash.rs  insert.rs  lookup.rs  mod.rs  scan.rs  types.rs
svault-core/src/reporting/: mod.rs
svault-core/src/verify/: background_hash.rs  hardlink_upgrade.rs  manifest.rs  mod.rs
svault-core/src/vfs/: manager.rs  mod.rs  mtp.rs  system.rs  transfer.rs
svault-core/tests/: scratch_exif.rs
tests/: check_results.py  gen_fixtures.py  run_tests.py  setup_ramdisk.sh  test_filename_conflict.py
tests/e2e/: README.md  conftest.py  pyproject.toml  run.ps1  run.sh  test_add.py  test_background_hash.py  test_binding.py  test_chaos.py  test_clone.py  test_concurrent_modification.py  test_config_transfer.py  test_cross_fs_integration.py  test_dedup.py  test_disk_full.py  test_exif_fallback.py  test_hardlink_upgrade.py  test_history.py  test_import.py  test_import_conflict.py  test_import_cross_fs.py  test_import_dedup.py  test_import_disk_full.py  test_import_force.py  test_import_interruption.py  test_import_recovery.py  test_import_video_metadata.py  test_path_compatibility.py  test_property.py  test_raw_id.py  test_reconcile.py  test_scan_import_pipeline.py  test_update.py  test_verify.py  test_video_metadata.py
tests/e2e/fixtures/: test_rules.json
tests/e2e/fuse_tests/: README.md  VALIDATION_PLAN.md  __init__.py  conftest.py  fault_inject_fs.py  requirements.txt  run_fuse.sh  test_corruption_fuse.py  test_import_fuse.py  test_recheck_fuse.py  test_verify_fuse.py
tests/fixtures/: test_rules.json
tests/scratch/: fix_exif_ifd.py  inspect_exif_ifd.py
