[package]
name = "svault-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "svault"
path = "src/main.rs"

[features]
default = ["mtp"]
mtp = ["svault-core/mtp"]

[dependencies]
svault-core = { path = "../svault-core", features = ["cli"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
serde_json = "1"
