[package]
name = "svault"
version = "0.1.0"
edition = "2024"
description = "Svault — a content-addressed multimedia archive tool"
license = "MIT"
repository = "https://github.com/rede97/svault"
keywords = ["archive", "multimedia", "photos", "vault", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "svault"
path = "src/main.rs"

[features]
default = ["mtp"]
mtp = ["svault-core/mtp"]

[dependencies]
svault-core = { version = "0.1.0", path = "../svault-core", features = ["cli"] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
console = "0.15"
serde_json = "1"
ctrlc = "3"
env_logger = "0.11"
