[package]
name = "svault-core"
version = "0.1.0"
edition = "2024"

[features]
default = ["mtp"]
cli = ["dep:clap"]
mtp = ["dep:mtp-rs", "dep:tokio", "dep:futures"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crc32c = "0.6"
jwalk = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
dashmap = "6"
rayon = "1"
indicatif = "0.17"
console = "0.15"
rich_rust = "0.2"
kamadak-exif = "0.5"
log = "0.4"
clap = { version = "4", features = ["derive"], optional = true }
mtp-rs = { version = "0.3", optional = true }
tokio = { version = "1", features = ["rt"], optional = true }
futures = { version = "0.3", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem"] }
