[package]
name = "svault-core"
version = "0.1.0"
edition = "2024"
description = "Core library for Svault — a content-addressed multimedia archive tool"
license = "MIT"
repository = "https://github.com/rede97/svault"
keywords = ["archive", "multimedia", "photos", "vault", "content-addressed"]
categories = ["filesystem"]

[features]
default = []
cli = ["dep:clap"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
crc32c = "0.6"
crc32fast = "1.3"
jwalk = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
dashmap = "6"
rayon = "1"
rich_rust = "0.2"
kamadak-exif = "0.5"
regex = "1"
chrono = "0.4"
fs2 = "0.4"
thiserror = "1"
clap = { version = "4", features = ["derive"], optional = true }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }

[dev-dependencies]
tempfile = "3"
walkdir = "2"
